--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -23,7 +23,7 @@ msgstr "Контроллеры"
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31002"
 msgid "Hub node"
-msgstr "Центр внимания"
+msgstr "HUB"
 
 #: Weather
 msgctxt "#31003"
@@ -58,7 +58,7 @@ msgstr "Установить графику погоды"
 #: /1080i/SkinSettings.xml
 msgctxt "#31009"
 msgid "Replace submenu with hub"
-msgstr "Заменить подменю на Центр внимания"
+msgstr "Заменить подменю на HUB"
 
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31010"
@@ -203,7 +203,7 @@ msgstr "Скачать субтитры"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31038"
 msgid "Submenu hub widget"
-msgstr "Виджет подменю В центре внимания"
+msgstr "Виджет подменю HUB"
 
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31039"
