--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -23,7 +23,7 @@ msgstr "Контроллеры"
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31002"
 msgid "Hub node"
-msgstr "HUB"
+msgstr "Узел HUB"
 
 #: Weather
 msgctxt "#31003"
@@ -678,7 +678,7 @@ msgstr "Похожие"
 #: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31136"
 msgid "Next-up episodes"
-msgstr "Следующие эпизоды"
+msgstr "Следующие серии"
 
 #: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31137"
@@ -959,7 +959,7 @@ msgstr "Выбор обложки (Kodi)"
 #: /shortcuts/overrides.xml
 msgctxt "#31194"
 msgid "Recently Played TV Shows"
-msgstr "Недавно сыгранные телешоу"
+msgstr "Недавно сыгранные ТВ-шоу"
 
 #: /1080i/Includes_Items.xml
 msgctxt "#31195"
@@ -969,7 +969,7 @@ msgstr "Выбор обложки (Artwork Beef)"
 #: /shortcuts/overrides.xml
 msgctxt "#31196"
 msgid "In Progress TV Shows"
-msgstr "Просматриваемые телешоу"
+msgstr "Просматриваемые ТВ-шоу"
 
 #: /1080i/Includes_Items.xml
 msgctxt "#31197"
@@ -979,7 +979,7 @@ msgstr "Скачать все изображения"
 #: /shortcuts/overrides.xml
 msgctxt "#31198"
 msgid "Recently Played Episodes"
-msgstr "Недавно сыгранные эпизоды"
+msgstr "Недавно сыгранные серии"
 
 msgctxt "#31199"
 msgid "Kiosk mode"
@@ -998,7 +998,7 @@ msgstr "Простая информация на экране (скрыть по
 #: /shortcuts/overrides.xml
 msgctxt "#31202"
 msgid "Random Episodes"
-msgstr "Случайные эпизоды"
+msgstr "Случайные серии"
 
 msgctxt "#31203"
 msgid "Artwork"
