--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Change position of studio/country etc tags to allow smart auto sizing
 - Add click/tap to close video OSD
 - Add button for lyrics
+- Simple IPTV archive
 
 0.9.53
 - Options to disable/enable language/country/codec tags
