--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.55
+- Fix for new TMDbHelper
+
 0.9.54
 - Change position of studio/country etc tags to allow smart auto sizing
 - Add click/tap to close video OSD
