fix for artist slideshow

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
+
 0.9.55
 - Fix for new TMDbHelper
+- Fir for new ArtistSlideshow
 
 0.9.54
 - Change position of studio/country etc tags to allow smart auto sizing
