Fix for player process info

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 
 0.9.55
 - Fix for new TMDbHelper
-- Fir for new ArtistSlideshow
+- Fix for new ArtistSlideshow
+- Fix for playerprocessinfo
 
 0.9.54
 - Change position of studio/country etc tags to allow smart auto sizing
