Initial View based on Info_Wall for AEL

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1476,3 +1476,8 @@ msgstr ""
 msgctxt "#31434"
 msgid "Clearart with seekbar"
 msgstr "Clearart with seekbar"
+
+#: /1080i/Includes_View_54_ROM_Simple.xml
+msgctxt "#31435"
+msgid "ROM Simple"
+msgstr ""
