use media info 2 as basic for new view

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1479,5 +1479,5 @@ msgstr "Clearart with seekbar"
 
 #: /1080i/Includes_View_54_ROM_Simple.xml
 msgctxt "#31435"
-msgid "ROM Simple"
+msgid "ROM Info"
 msgstr ""
