Add changes and increment version

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.58
+- Fix Icon Wall View to remove stretch for Advanced Emulator Launcher
+- Add Platform Icon and ROM Details for Advanced Emulator Launcher
+
 0.9.57
 - Fix vertical scrollbar for Advanced Emulator Launcher views and remove duplicate clearlogo
 
