--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.59
+- Add ratings (imdb, metacritc, rotten tomatoes) to Info Wall, Tri-Panel and Poster views
+
 0.9.58
 - Fix Icon Wall View to remove stretch for Advanced Emulator Launcher
 - Add Platform Icon and ROM Details for Advanced Emulator Launcher
