only changing info wall for now

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 0.9.59
-- Add ratings (imdb, metacritc, rotten tomatoes) to Info Wall, Tri-Panel and Poster views
+- Add ratings (imdb, metacritc, rotten tomatoes) to Info Wall view.
 
 0.9.58
 - Fix Icon Wall View to remove stretch for Advanced Emulator Launcher
