--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -1,6 +1,6 @@
 # Kodi Media Center language file
-# Addon Name: Horizon
-# Addon id: skin.horizon
+# Addon Name: Artic Zephyr 2
+# Addon id: skin.artic.zephyr.2
 # Addon Provider: jurialmunkey
 msgid ""
 msgstr ""
@@ -47,8 +47,8 @@ msgstr "Colección"
 
 #: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31007"
-msgid "Use script.extendedinfo"
-msgstr "Usar script.extendedinfo"
+msgid "Use online information"
+msgstr "Usar información online"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31008"
@@ -93,7 +93,7 @@ msgstr "Seleccionar elementos para diálogo de información"
 #: /1080i/SkinSettings.xml
 msgctxt "#31016"
 msgid "Mirror mediainfo viewtypes"
-msgstr "Mostrar información en modo reflejado en los tipos de vistas"
+msgstr "Mostrar información en los tipos de vista en modo reflejado"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31017"
@@ -108,7 +108,7 @@ msgstr "Acceso directo común"
 #: /1080i/SkinSettings.xml
 msgctxt "#31019"
 msgid "Left-align showcase viewtypes"
-msgstr "Alinear a la izquierda escaparate de imágenes en los tipos de vista"
+msgstr "Alinear a la izquierda el escaparate de imágenes en los tipos de vista"
 
 #: /1080i/script-globalsearch-main.xml
 msgctxt "#31020"
@@ -138,12 +138,12 @@ msgstr "Adornos"
 #: /1080i/SkinSettings.xml
 msgctxt "#31025"
 msgid "Codec flags"
-msgstr "Mostrar flags para codec"
+msgstr "Mostrar banderas para códec"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31026"
 msgid "Library location"
-msgstr "Localización en la biblioteca"
+msgstr "Ubicación de la biblioteca"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31027"
@@ -153,7 +153,7 @@ msgstr "Personalizar menú de energía"
 #: /1080i/SkinSettings.xml
 msgctxt "#31028"
 msgid "Reset skin settings to defaults (WARNING: This will reset your home menu to skin defaults)"
-msgstr "Restablecer configuración del skin a valores por defecto (ADVERTENCIA: Esto restablecerá su skin)"
+msgstr "Restablecer configuración del skin a valores por defecto (ADVERTENCIA: Esto restablecerá su skin o máscara)"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31029"
@@ -168,12 +168,12 @@ msgstr "Copia de seguridad / Restaurar"
 #: /1080i/SkinSettings.xml
 msgctxt "#31031"
 msgid "Backup skin settings"
-msgstr "Realizar copia de seguridad de la configuración del skin"
+msgstr "Realizar copia de seguridad de los ajustes del skin"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31032"
 msgid "Restore skin settings"
-msgstr "Restaurar configuración del skin"
+msgstr "Restaurar ajustes del skin"
 
 #: /1080i/Includes_Items.xml
 msgctxt "#31033"
@@ -228,7 +228,7 @@ msgstr "Por actores nombrados"
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31043"
 msgid "By Directors Named"
-msgstr "Por directores nombrados"
+msgstr "Por directores"
 
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31044"
@@ -310,50 +310,50 @@ msgctxt "#31059"
 msgid "Context Menu"
 msgstr "Menú contextual"
 
-#: /1080i/script-script.extendedinfo-DialogInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31060"
-msgid "Films starring"
-msgstr "Películas protagonizadas"
+msgid "Blur settings"
+msgstr "Ajustes para desenfoque"
 
-#: /1080i/script-script.extendedinfo-DialogInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31061"
-msgid "Tv shows starring"
-msgstr "Series TV protagonizadas"
+msgid "Effect"
+msgstr "Efecto"
 
-#: /1080i/script-script.extendedinfo-DialogInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31062"
-msgid "Films with"
-msgstr "Películas con"
+msgid "Blur Size"
+msgstr "Tamaño desenfoque"
 
-#: /1080i/script-script.extendedinfo-DialogInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31063"
-msgid "as Crew"
-msgstr "como Equipo técnico"
+msgid "Pixel Size"
+msgstr "Tamaño pixel"
 
-#: /1080i/script-script.extendedinfo-DialogInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31064"
-msgid "Tv shows with"
-msgstr "Series TV con"
+msgid "Bits"
+msgstr "Bits"
 
-#: /1080i/script-script.extendedinfo-DialogInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31065"
-msgid "Images of"
-msgstr "Imágenes de"
+msgid "Preview Image"
+msgstr "Vista previa"
 
-#: /1080i/script-script.extendedinfo-DialogVideoInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31066"
-msgid "Crew of"
-msgstr "Equipo técnico"
+msgid "Important"
+msgstr "Importante"
 
-#: /1080i/script-script.extendedinfo-DialogVideoInfo.xml
+#: /1080i/Custom_1116_ColorBoxAdvancedSettings.xml
 msgctxt "#31067"
-msgid "Trailers"
-msgstr "Tráilers"
+msgid "Quality changes resolution of the generated image$COMMA which may also alter the intensity of the effect. Better quality images take longer to process.[CR]Blend layers the effect over the original image$COMMA with 100% showing the effect and 0% showing the original."
+msgstr "La calidad cambia la resolución de la imagen generada$COMMA que también puede alterar la intensidad del efecto. Imágenes de mejor calidad tardan más en procesarse.[CR]Blend combina el efecto sobre la imagen original$COMMA con un 100% que muestra el efecto y un 0% que muestra el original."
 
 #: /1080i/Includes_Weather.xml
 msgctxt "#31068"
 msgid "Cloud cover"
-msgstr ""
+msgstr "Cubierto de nubes"
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31069"
@@ -363,12 +363,12 @@ msgstr "Administración"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31070"
 msgid "This category contains settings to customise home screen shortcuts$COMMA widgets and layout."
-msgstr "Esta categoría contiene configuraciones para personalizar los accesos directos de la pantalla de inicio$COMMA widgets y diseño."
+msgstr "Esta categoría contiene ajustes para personalizar los accesos directos de la pantalla de inicio$COMMA widgets y diseño."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31071"
 msgid "This category contains settings to customise what images are displayed in the background."
-msgstr "Esta categoría contiene configuraciones para personalizar que imágenes se muestran como fondo"
+msgstr "Esta categoría contiene ajustes para personalizar que imágenes se muestran como fondo."
 
 #: /1080i/DialogButtonMenu.xml
 msgctxt "#31072"
@@ -378,27 +378,27 @@ msgstr "Menú de apagado"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31073"
 msgid "This category contains settings to customise the highlight and selection-box colors used in the skin."
-msgstr "Esta categoría contiene configuraciones para personalizar el resaltado y los colores del cuadro de selección usados ​​en la máscara."
+msgstr "Esta categoría contiene ajustes para personalizar el resaltado y los colores del cuadro de selección usados ​​en la máscara."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31074"
 msgid "This category contains settings to customise what is displayed in information dialogs and library views."
-msgstr "Esta categoría contiene configuraciones para personalizar lo que se muestra en los diálogos de información y las vistas de la biblioteca."
+msgstr "Esta categoría contiene ajustes para personalizar lo que se muestra en los diálogos de información y las vistas de la biblioteca."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31075"
 msgid "This category contains settings to customise what is displayed when playing music or video fullscreen."
-msgstr "Esta categoría contiene configuraciones para personalizar lo que se muestra cuando se reproduce música o vídeo a pantalla completa."
+msgstr "Esta categoría contiene ajustes para personalizar lo que se muestra cuando se reproduce música o vídeo a pantalla completa."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31076"
 msgid "This category contains settings to customise what is displayed in the PVR."
-msgstr "Esta categoría contiene configuraciones para personalizar lo que se muestra en el PVR."
+msgstr "Esta categoría contiene ajustes para personalizar lo que se muestra en el PVR."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31077"
 msgid "This category contains settings that do not fit other categories."
-msgstr "Esta categoría contiene configuraciones que no se ajustan a otras categorías."
+msgstr "Esta categoría contiene ajustes que no se ajustan a otras categorías."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31078"
@@ -418,7 +418,7 @@ msgstr "Esta categoría contiene opciones para hacer una copia de seguridad$COMM
 #: /1080i/Includes_Labels.xml
 msgctxt "#31081"
 msgid "This section contains skin settings for Arctic Zephyr 2."
-msgstr "Esta sección contiene configuraciones de máscara para Arctic Zephyr 2."
+msgstr "Esta sección contiene los ajustes para la piel Arctic Zephyr 2."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31082"
@@ -428,22 +428,22 @@ msgstr "Esta sección contiene información sobre su sistema."
 #: /1080i/Includes_Labels.xml
 msgctxt "#31083"
 msgid "This section contains system settings."
-msgstr "Esta sección contiene la configuración del sistema."
+msgstr "Esta sección contiene los ajustes del sistema."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31084"
 msgid "This section contains Live TV and PVR settings."
-msgstr "Esta sección contiene configuraciones de TV en directo y PVR."
+msgstr "Esta sección contiene ajustes para TV en directo y PVR."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31085"
 msgid "This section contains login-screen and profile settings."
-msgstr "Esta sección contiene configuraciones de pantalla y perfil de inicio de sesión."
+msgstr "Esta sección contiene ajustes de pantalla y perfil de inicio de sesión."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31086"
 msgid "This section contains service settings."
-msgstr "Esta sección contiene configuraciones de servicio."
+msgstr "Esta sección contiene ajustes relacionados con los servicios."
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31087"
@@ -458,27 +458,27 @@ msgstr "Mostrar efecto de texto en desplazamiento"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31089"
 msgid "This section contains interface and regional settings."
-msgstr "Esta sección contiene la interfaz y la configuración regional."
+msgstr "Esta sección contiene ajustes para la interfaz y la configuración regional."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31090"
 msgid "This section contains media and library settings."
-msgstr "Esta sección contiene configuraciones de medios y bibliotecas."
+msgstr "Esta sección contiene ajustes para medios y bibliotecas."
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31091"
 msgid "This section contains playback settings."
-msgstr "Esta sección contiene configuraciones de reproducción."
+msgstr "Esta sección contiene ajustes de reproducción."
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31092"
-msgid "Plot boxes use Roboto font"
-msgstr "Usar fuente Roboto al mostrar el argumento"
+msgid "Plot boxes use Faune font"
+msgstr "Usar fuente Faune al mostrar el argumento"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31093"
 msgid "Slim PVR Guide"
-msgstr "Usar Guía PVR Slim"
+msgstr "Usar Guía PVR delgada"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31094"
@@ -533,7 +533,7 @@ msgstr "Memoria usada"
 
 msgctxt "#31105"
 msgid "Spotlight"
-msgstr ""
+msgstr "Destacados"
 
 msgctxt "#31106"
 msgid "Ends "
@@ -638,7 +638,7 @@ msgstr "10 minutos"
 #: /1080i/SkinSettings.xml
 msgctxt "#31128"
 msgid "Set autoscroll and time per image"
-msgstr "Establecer tiempo de desplazamiento automático para imagen"
+msgstr "Establecer desplazamiento automático y tiempo para cada imagen"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31129"
@@ -721,8 +721,8 @@ msgstr "Fuentes e ilustraciones"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31145"
-msgid "Always display on-screen info"
-msgstr "Mostrar siempre la información en pantalla"
+msgid "Display additional on-screen information with controls or when paused"
+msgstr "Mostrar información adicional en pantalla con controles o cuando se esta en pausa"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31146"
@@ -786,7 +786,7 @@ msgstr "Álbumes de artista"
 #: /1080i/SkinSettings.xml
 msgctxt "#31158"
 msgid "Automatically open visualisation after starting a song"
-msgstr "Abrir automáticamente la visualización de música al iniciar una canción"
+msgstr "Abrir automáticamente visualización al iniciar una canción"
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31159"
@@ -878,6 +878,11 @@ msgctxt "#31177"
 msgid "Are you sure you want to remove the settings shortcut?[CR]Please ensure that you have an alternative method of accessing settings before you remove this shortcut."
 msgstr "¿Está seguro de que desea eliminar el acceso directo a configuración?[CR]Asegúrese de tener un método alternativo para acceder a la configuración antes de eliminar este acceso directo."
 
+#: /1080i/DialogPVRChannelsOSD.xml
+msgctxt "#31178"
+msgid "Up Next"
+msgstr "Siguiente"
+
 #: /1080i/Includes_Home.xml
 msgctxt "#31179"
 msgid "Lock view"
@@ -902,29 +907,74 @@ msgctxt "#31183"
 msgid "Default Widgets"
 msgstr "Widgets por defecto"
 
+#: /1080i/DialogPVRChannelsOSD.xml
+msgctxt "#31184"
+msgid "On Now"
+msgstr "Ahora"
+
 #: /shortcuts/overrides.xml
 msgctxt "#31185"
 msgid "Recently Added Movies"
 msgstr "Películas añadidas recientemente"
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31186"
+msgid "Theme Switching"
+msgstr "Cambio de tema"
+
 msgctxt "#31187"
 msgid "Random Albums"
 msgstr "Álbumes aleatorios"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31188"
+msgid "Automatically switch color theme based on time (Light 6am - Dark 6pm)"
+msgstr "Cambiar automáticamente tema de color según momento del día (Claro 6am - Oscuro 6pm)"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31189"
+msgid "Geometric pattern on panels"
+msgstr "Patrón geométrico en paneles"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31190"
 msgid "Recently Played Movies"
 msgstr "Películas reproducidas recientemente"
 
+#: /1080i/MyPVRChannels.xml
+msgctxt "#31191"
+msgid "Info List"
+msgstr "Lista Información"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31192"
+msgid "Numeric star rating"
+msgstr "Valoración numérica"
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31193"
+msgid "Select Art (Kodi)"
+msgstr "Seleccionar arte (Kodi)"
+
 #: /shortcuts/overrides.xml
 msgctxt "#31194"
 msgid "Recently Played TV Shows"
 msgstr "Series TV reproducidas recientemente"
 
+#: /1080i/Includes_Items.xml
+msgctxt "#31195"
+msgid "Select Art (Artwork Beef)"
+msgstr "Seleccionar arte (Artwork Beef)"
+
 #: /shortcuts/overrides.xml
 msgctxt "#31196"
 msgid "In Progress TV Shows"
 msgstr "Series TV en progreso"
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31197"
+msgid "Download all art"
+msgstr "Descargar todo el arte"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31198"
@@ -954,6 +1004,26 @@ msgctxt "#31203"
 msgid "Artwork"
 msgstr "Ilustraciones"
 
+#: /1080i/Includes_Items.xml
+msgctxt "#31204"
+msgid "Refresh Info"
+msgstr "Refrescar información"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31205"
+msgid "Animate background using Ken Burns effect"
+msgstr "Animar fondo usando efecto Ken Burns"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31206"
+msgid "Channel numbers"
+msgstr "Número de canal"
+
+#: /1080i/Includes_OSD.xml
+msgctxt "#31207"
+msgid "Ends"
+msgstr "Finalaza a las "
+
 #: /shortcuts/overrides.xml
 msgctxt "#31214"
 msgid "Recently Added Episodes"
@@ -967,7 +1037,7 @@ msgstr "Películas en progreso"
 #: /1080i/Includes_Home.xml
 msgctxt "#31217"
 msgid "Change location"
-msgstr "Cambiar localización"
+msgstr "Cambiar ubicación"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31218"
@@ -986,7 +1056,7 @@ msgstr "Top Películas valoradas"
 #: /shortcuts/overrides.xml
 msgctxt "#31230"
 msgid "Top Rated Episodes"
-msgstr "Top episodios valorados"
+msgstr "Top Episodios valorados"
 
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31231"
@@ -1025,12 +1095,12 @@ msgstr "Editar accesos directos"
 #: /shortcuts/overrides.xml
 msgctxt "#31257"
 msgid "Movie Genres"
-msgstr "Generos película"
+msgstr "Géneros película"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31260"
 msgid "Movie Sets"
-msgstr "Colección de película"
+msgstr "Colecciones película"
 
 msgctxt "#31262"
 msgid "Poster"
@@ -1073,12 +1143,12 @@ msgstr "Usar desenfocado para fondo"
 #: /shortcuts/overrides.xml
 msgctxt "#31276"
 msgid "IMDB Top 250 Movies"
-msgstr "IMDB Top 250 Películas"
+msgstr "Top 250 IMDB Películas"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31278"
 msgid "Unwatched Movies"
-msgstr "Película"
+msgstr "Películas no vistas"
 
 msgctxt "#31279"
 msgid "Video decoder"
@@ -1086,7 +1156,7 @@ msgstr "Decodificador de vídeo"
 
 msgctxt "#31280"
 msgid "Pixel format"
-msgstr "Formato de píxel"
+msgstr "Formato píxel"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31283"
@@ -1110,7 +1180,7 @@ msgstr "Kodi está ocupado$COMMA un momento por favor"
 #: /shortcuts/overrides.xml
 msgctxt "#31295"
 msgid "Random Artists"
-msgstr "Artistas al azar"
+msgstr "Artistas aleatorios"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31296"
@@ -1125,7 +1195,7 @@ msgstr "Nodos serie TV"
 #: /1080i/Includes_View_List.xml
 msgctxt "#31298"
 msgid "Media Info"
-msgstr "Info multimedia"
+msgstr "Media Info"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31300"
@@ -1160,7 +1230,7 @@ msgstr "Características especiales"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31308"
 msgid "Player"
-msgstr "Player"
+msgstr ""
 
 #: /1080i/Includes_Home.xml
 msgctxt "#31310"
@@ -1205,7 +1275,7 @@ msgstr "OSD de música"
 #: /1080i/Startup.xml
 msgctxt "#31349"
 msgid "Initialising Skin"
-msgstr "Inicializando skin"
+msgstr "Iniciando skin"
 
 #: /1080i/script-script.extendedinfo-DialogInfo.xml
 msgctxt "#31356"
@@ -1255,12 +1325,12 @@ msgstr "Orden"
 #: /1080i/SkinSettings.xml
 msgctxt "#31377"
 msgid "Display video lyrics"
-msgstr "Mostrar letras (lyrics) en el vídeo"
+msgstr "Mostrar letras (lyrics)"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31379"
 msgid "Display plot overlay after delay"
-msgstr "Mostrar superposición del argumento en espera"
+msgstr "Mostrar argumento durante la pausa"
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31380"
@@ -1270,7 +1340,7 @@ msgstr "Sin título"
 #: /shortcuts/overrides.xml
 msgctxt "#31381"
 msgid "Last Played Channels"
-msgstr "Ultimos canales reproducidos"
+msgstr "Últimos canales reproducidos"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31382"
@@ -1350,7 +1420,7 @@ msgstr "TV en directo / PVR"
 #: /1080i/Includes_View_50_List.xml
 msgctxt "#31423"
 msgid "Media Info 2"
-msgstr "Info multimedia 2"
+msgstr ""
 
 #: /1080i/Includes_View_51_Wall.xml
 msgctxt "#31424"
@@ -1370,7 +1440,7 @@ msgstr ""
 #: /1080i/Includes_View_52_Showcase.xml
 msgctxt "#31427"
 msgid "Season Info"
-msgstr "Info temporada"
+msgstr ""
 
 #: /1080i/Includes_View.xml
 msgctxt "#31428"
@@ -1397,7 +1467,17 @@ msgctxt "#31432"
 msgid "Music Videos by Artist Named"
 msgstr "Videos musicales por nombre de artista"
 
-#: /1080i/SkinSettings.xml
+#: /1080i/script-skin_helper_service-ColorPicker.xml
 msgctxt "#31433"
-msgid "Home Layout"
-msgstr "Diseño del menú de inicio"
+msgid "Choose Palette"
+msgstr "Seleccionar paleta"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31434"
+msgid "Clearart with seekbar"
+msgstr "Mostrar Clearart con la barra de búsqueda"
+
+#: /1080i/Includes_View_54_ROM_Simple.xml
+msgctxt "#31435"
+msgid "ROM Trailer"
+msgstr "Traíler ROM"
