--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -93,7 +93,7 @@ msgstr "Seleccionar elementos para diálogo de información"
 #: /1080i/SkinSettings.xml
 msgctxt "#31016"
 msgid "Mirror mediainfo viewtypes"
-msgstr "Mostrar información en los tipos de vista en modo reflejado"
+msgstr "Mostrar información en tipos de vista en modo reflejado"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31017"
@@ -473,7 +473,7 @@ msgstr "Esta sección contiene ajustes de reproducción."
 #: /1080i/SkinSettings.xml
 msgctxt "#31092"
 msgid "Plot boxes use Faune font"
-msgstr "Usar fuente Faune al mostrar el argumento"
+msgstr "Usar fuente Faune al mostrar argumento"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31093"
@@ -993,7 +993,7 @@ msgstr "Películas aleatorias"
 #: /1080i/SkinSettings.xml
 msgctxt "#31201"
 msgid "Simple on-screen info (hide poster and plot)"
-msgstr "Mostrar información simple en pantalla (oculta póster y trama)"
+msgstr "Mostrar información simple en pantalla (oculta póster y argumento)"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31202"
