Add new View Info Wall 2

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1481,3 +1481,8 @@ msgstr "Clearart with seekbar"
 msgctxt "#31435"
 msgid "ROM Trailer"
 msgstr ""
+
+#: /1080i/Includes_View_51_Wall.xml
+msgctxt "#31436"
+msgid "Info Wall 2"
+msgstr ""
