Bug on one string

--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -1022,7 +1022,7 @@ msgstr "Número de canal"
 #: /1080i/Includes_OSD.xml
 msgctxt "#31207"
 msgid "Ends"
-msgstr "Finalaza a las "
+msgstr "Finaliza a las "
 
 #: /shortcuts/overrides.xml
 msgctxt "#31214"
