Bug on one string

--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -1480,4 +1480,4 @@ msgstr "Mostrar Clearart con la barra de búsqueda"
 #: /1080i/Includes_View_54_ROM_Simple.xml
 msgctxt "#31435"
 msgid "ROM Trailer"
-msgstr "Traíler ROM"
+msgstr "Tráiler ROM"
