--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -1,13 +1,16 @@
 # Kodi Media Center language file
-# Addon Name: Horizon
-# Addon id: skin.horizon
+# Addon Name: Arctic: Zephyr
+# Addon id: skin.arctic.zephyr.2
 # Addon Provider: jurialmunkey
 msgid ""
 msgstr ""
+"POT-Creation-Date: 2020-04-14 00:00+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: roliverosc <roliverosc@hotmail.com>, 2020\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
+"Language: es_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: /1080i/Custom_1134_Custom_Hub.xml
@@ -868,7 +871,7 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31175"
 msgid "Replace genre with program times"
-msgstr "Reemplazar género por guía temporal de los programas"
+msgstr "Reemplazar género por guía temporal de programas"
 
 msgctxt "#31176"
 msgid "Delete Settings Shortcut"
@@ -1481,3 +1484,8 @@ msgstr "Mostrar Clearart con la barra de búsqueda"
 msgctxt "#31435"
 msgid "ROM Trailer"
 msgstr "Tráiler ROM"
+
+#: /1080i/Includes_View_51_Wall.xml
+msgctxt "#31436"
+msgid "Info Wall 2"
+msgstr "Info Wall 2"
