--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -96,12 +96,12 @@ msgstr "Seleccionar elementos para diálogo de información"
 #: /1080i/SkinSettings.xml
 msgctxt "#31016"
 msgid "Mirror mediainfo viewtypes"
-msgstr "Mostrar información en tipos de vista en modo reflejado"
+msgstr "Mostrar información en modo reflejado en tipos de vista"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31017"
 msgid "Smart Shortcuts"
-msgstr "Atajos inteligentes"
+msgstr "Smart Shortcuts"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31018"
@@ -111,7 +111,7 @@ msgstr "Acceso directo común"
 #: /1080i/SkinSettings.xml
 msgctxt "#31019"
 msgid "Left-align showcase viewtypes"
-msgstr "Alinear a la izquierda el escaparate de imágenes en los tipos de vista"
+msgstr "Mostrar a la izquierda escaparate de imágenes en tipos de vista"
 
 #: /1080i/script-globalsearch-main.xml
 msgctxt "#31020"
@@ -206,7 +206,7 @@ msgstr "Descargar subtítulos"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31038"
 msgid "Submenu hub widget"
-msgstr "Submenú widget hub"
+msgstr "Submenú hub widget"
 
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31039"
@@ -226,7 +226,7 @@ msgstr "Año de publicación"
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31042"
 msgid "By Actors Named"
-msgstr "Por actores nombrados"
+msgstr "Por actores"
 
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31043"
@@ -236,7 +236,7 @@ msgstr "Por directores"
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31044"
 msgid "Albums by"
-msgstr "Álbumes por"
+msgstr "Álbumes de"
 
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31045"
@@ -291,7 +291,7 @@ msgstr "Siguiente"
 #: /1080i/DialogVideoInfo.xml
 msgctxt "#31055"
 msgid "Cast Members Also Feature In"
-msgstr "Los miembros del reparto también figuran en"
+msgstr "El reparto también aparece en"
 
 #: /1080i/DialogVideoInfo.xml
 msgctxt "#31056"
@@ -1328,7 +1328,7 @@ msgstr "Orden"
 #: /1080i/SkinSettings.xml
 msgctxt "#31377"
 msgid "Display video lyrics"
-msgstr "Mostrar letras (lyrics)"
+msgstr "Mostrar letras de canciones (CU LCR Lyrics)"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31379"
