--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1486,3 +1486,8 @@ msgstr ""
 msgctxt "#31436"
 msgid "Info Wall 2"
 msgstr ""
+
+#: /1080i/Includes_View_51_Wall.xml
+msgctxt "#31437"
+msgid "Info Wall 3"
+msgstr ""
