update changelog and minor version bump

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.62.1
+ - Fix for AEL to remove Box3D rendering since the plugin does not support managing that asset anymore
+
 0.9.62
  - Add Video View 'ROM Info Wall Trailer'
 
