--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -117,7 +117,7 @@ msgstr "Alinear a la izquierda el escaparate de imágenes en tipos de vista"
 #: /1080i/script-globalsearch-main.xml
 msgctxt "#31020"
 msgid "mins"
-msgstr "minutos"
+msgstr "mins"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31021"
@@ -217,7 +217,7 @@ msgstr "Widget de fondo"
 #: /1080i/Custom_1117_EnableViews.xml
 msgctxt "#31040"
 msgid "Poster Showcase"
-msgstr ""
+msgstr "Escaparate de carteles"
 
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31041"
@@ -502,7 +502,7 @@ msgstr "Usar plantilla para los nombres de canciones"
 #: /1080i/Includes_Home.xml
 msgctxt "#31097"
 msgid "Ends at"
-msgstr "Finaliza a las"
+msgstr "Termina a las"
 
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31098"
@@ -541,7 +541,7 @@ msgstr "Destacados"
 
 msgctxt "#31106"
 msgid "Ends "
-msgstr "Finaliza a las "
+msgstr "Termina a las "
 
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31107"
@@ -672,7 +672,7 @@ msgstr "Preferir desenfoque de la imagen póster"
 #: /1080i/Includes_View_50_List.xml
 msgctxt "#31134"
 msgid "Tri-Panel"
-msgstr "Tri-panel"
+msgstr "Panel triple"
 
 #: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31135"
@@ -854,7 +854,7 @@ msgstr "Clearlogo"
 #: /1080i/Includes_View_52_Showcase.xml
 msgctxt "#31171"
 msgid "Season Info 2"
-msgstr ""
+msgstr "Info de temporada 2"
 
 msgctxt "#31172"
 msgid "Display music visualisation in background"
@@ -1026,7 +1026,7 @@ msgstr "Número de canal"
 #: /1080i/Includes_OSD.xml
 msgctxt "#31207"
 msgid "Ends"
-msgstr "Finaliza a las "
+msgstr "Termina a las "
 
 #: /shortcuts/overrides.xml
 msgctxt "#31214"
@@ -1199,7 +1199,7 @@ msgstr "Nodos serie TV"
 #: /1080i/Includes_View_List.xml
 msgctxt "#31298"
 msgid "Media Info"
-msgstr "Media Info"
+msgstr "Info de contenido"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31300"
@@ -1289,32 +1289,32 @@ msgstr "Años"
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31358"
 msgid "Poster Wall"
-msgstr ""
+msgstr "Muro de carteles"
 
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31359"
 msgid "Landscape Wall"
-msgstr ""
+msgstr "Muro de Landscape"
 
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31360"
 msgid "Square Wall"
-msgstr ""
+msgstr "Muro cuadrado"
 
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31361"
 msgid "Landscape Showcase"
-msgstr ""
+msgstr "Escaparate de Landscape"
 
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31362"
 msgid "Square Showcase"
-msgstr ""
+msgstr "Escaparate cuadrado"
 
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31363"
 msgid "Big Posters"
-msgstr ""
+msgstr "Carteles grandes"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31367"
@@ -1414,7 +1414,7 @@ msgstr "Icono"
 #: /1080i/Includes_View_50_List.xml
 msgctxt "#31421"
 msgid "Banner List"
-msgstr ""
+msgstr "Lista de Banners"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31422"
@@ -1424,27 +1424,27 @@ msgstr "TV en directo / PVR"
 #: /1080i/Includes_View_50_List.xml
 msgctxt "#31423"
 msgid "Media Info 2"
-msgstr ""
+msgstr "Info de contenido 2"
 
 #: /1080i/Includes_View_51_Wall.xml
 msgctxt "#31424"
 msgid "Icon Wall"
-msgstr ""
+msgstr "Muro de iconos"
 
 #: /1080i/Includes_View_51_Wall.xml
 msgctxt "#31425"
 msgid "Circle Wall"
-msgstr ""
+msgstr "Muro circular"
 
 #: /1080i/Includes_View_51_Wall.xml
 msgctxt "#31426"
 msgid "Info Wall"
-msgstr ""
+msgstr "Muro e información"
 
 #: /1080i/Includes_View_52_Showcase.xml
 msgctxt "#31427"
 msgid "Season Info"
-msgstr ""
+msgstr "Info de Temporada"
 
 #: /1080i/Includes_View.xml
 msgctxt "#31428"
@@ -1464,7 +1464,7 @@ msgstr "En cola"
 #: /1080i/Includes_View_51_Wall.xml
 msgctxt "#31431"
 msgid "Landscape Wall Small"
-msgstr ""
+msgstr "Muro de Landscape pequeño"
 
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31432"
@@ -1489,9 +1489,9 @@ msgstr "Tráiler de ROM"
 #: /1080i/Includes_View_51_Wall.xml
 msgctxt "#31436"
 msgid "Info Wall 2"
-msgstr "Info Wall 2"
+msgstr "Muro e información 2"
 
 #: /1080i/Includes_View_54_AEL.xml
 msgctxt "#31437"
 msgid "ROM Info Wall Trailer"
-msgstr ""
+msgstr "Muro, información y tráiler ROM"
