--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -537,7 +537,7 @@ msgstr "Memoria usada"
 
 msgctxt "#31105"
 msgid "Spotlight"
-msgstr "Destacados"
+msgstr "Destacadas"
 
 msgctxt "#31106"
 msgid "Ends "
@@ -1108,7 +1108,7 @@ msgstr "Colecciones"
 
 msgctxt "#31262"
 msgid "Poster"
-msgstr "Póster"
+msgstr "Carteles"
 
 msgctxt "#31267"
 msgid "Action"
