Fix to try and make skin compatible with Kodi 19. Power menu not working still

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.63.1
+ - Fix for Kodi 19 Matrix by removing XMBC. prefixes from function calls
+0.9.63.0
+ - Fix for Kodi 19 Matrix compatibility
 0.9.62.1
  - Fix for AEL to remove Box3D rendering since the plugin does not support managing that asset anymore
 
