port video nav fixes by pkscout

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+0.9.63.2
+ - Fix for MyVideoNav. Used code by pkscout https://bit.ly/3ph9FDw
 0.9.63.1
  - Fix for Kodi 19 Matrix by removing XMBC. prefixes from function calls
 0.9.63.0
